feat: implementando hexagonal